src/web/kube.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forklol-web
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: forklol
        tier: forklol-frontend
    spec:
      containers:
        - image: eu.gcr.io/splendid-sled-172714/forklol-web:v0.36.28
          name: forklol-web
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
          ports:
          - containerPort: 80
