src/web/kube.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forklol-web-service
  labels:
    app: forklol
    tier: forklol-frontend
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: forklol
    tier: forklol-frontend
